--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "rebing/graphql-laravel": "^9.7",
         "webonyx/graphql-php": "^15.19"
     },
     "require-dev": {
